# machina

./: .dockerignore  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
deploy/docker/: .env.example  .gitignore  Dockerfile  config.yaml  docker-compose.yml
deploy/systemd/: README.md  machina.env.example  machina.service
docs/: architecture.md  capabilities.json  capabilities.md  domain.md  index.md  llms.txt  mcp-server.md  quickstart.md  roadmap.md  troubleshooting.md  yaml-config.md
docs/api/: agent.md  exceptions.md  introspect.md  observability.md  runtime.md  workflows.md
docs/connectors/: calendar.md  custom.md  document-store.md  email.md  excel.md  generic_cmms.md  maximo.md  mqtt.md  opcua.md  sap-pm.md  slack.md  sql.md  upkeep.md
docs/deployment/: docker.md  on-premise.md  scaling.md  secrets.md  security.md  uptime.md
docs/mcp/: auth.md  prompts.md  resources.md  setup.md  tools.md
docs/migration/: v0.2-to-v0.3.md
docs/observability/: cost.md  traces.md
docs/starter-kits/: odl-generator-from-text.md
docs/templates/: odl-generator-from-text.md
evals/: README.md  __init__.py
evals/conversational/: __init__.py  run.py  schema.py
examples/: .env.example  README.md  _mode.py  _preflight.py  tour.ipynb
examples/01_alarm_response/: README.md  agent.py
examples/02_predictive_pipeline/: README.md  agent.py
examples/03_cmms_portability/: README.md  agent.py
examples/04_custom_workflows/: README.md  agent.py
examples/05_multi_agent_team/: README.md
examples/06_yaml_config/: README.md  agent.py  machina.yaml
examples/07_agent_driven/: agent.py
examples/alarm_to_workorder/: README.md  agent.py
examples/knowledge_agent/: README.md  main.py
examples/predictive_pipeline/: README.md  main.py
examples/quickstart/: README.md  agent.py
examples/reference/: README.md
examples/sample_data/: failure_modes.csv
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: build-machina-agent.md  extend-machina.md
scripts/: gen_spine.py
src/machina/: __init__.py  _compat.py  cli.py  exceptions.py  runtime.py
templates/: README.md
templates/odl-generator-from-text/: .env.example  .gitignore  Dockerfile  README.md  agent.py  config.yaml  docker-compose.yml
tests/: conftest.py  test_example_actions.py  validate_doc_snippets.py  validate_docs_coverage.py  validate_examples.py  validate_model_access.py
tests/e2e/: test_examples_cli_consistency.py  test_knowledge_agent_quickstart.py
tests/integration/: test_document_store_extras.py  test_document_store_golden.py  test_entity_resolver_en.py  test_entity_resolver_it.py  test_example_data.py  test_excel_watcher.py  test_failure_modes_substrates.py  test_generic_cmms_rest.py  test_generic_sql_db2_mock.py  test_generic_sql_sqlserver.py  test_knowledge_agent_manuals.py  test_maximo_rest.py  test_mqtt.py  test_opcua.py  test_sap_pm_rest.py  test_upkeep_rest.py
tests/unit/: test_agent_runtime.py  test_alarm_to_workorder.py  test_calendar_connector.py  test_capabilities.py  test_cli.py  test_config.py  test_config_schema.py  test_connector_factory.py  test_connectors.py  test_docs_coverage.py  test_document_store.py  test_email.py  test_entity_resolver.py  test_eval_scenario_schema.py  test_examples_mode_helper.py  test_exceptions.py  test_from_config.py  test_generic_cmms.py  (+25 more)
(+231 files in other folders)
